<resources>
<string name="app_name">Climbing Score App</string>
<string name="score_label">🎯 Score:</string>
<string name="hold_label">⚔️ Hold:</string>
<string name="time_label">⏰ Time:</string>
<string name="game_over">🎮 Game Over</string>
<string name="max_score">🏆 Maximum Score</string>
<string name="climb">⛰️ Climb</string>
<string name="fall">📉 Fall</string>
<string name="reset">🔄 Reset</string>
<string name="congratulations">Congratulations %1$s! You have reached the score: %2$d and the time is %3$s</string>
<string name="enter_athlete_name">🧗🏾 Enter Athlete\'s Name</string>
<string name="default_timer_text" translatable="false">⏰ Time: 00:00:00</string>
</resources>
